[package]
name = "elasticsearch_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.1.2", features = ["serde"] }
elasticsearch_query_derive = {path = "../elasticsearch_query_derive"}