[package]
name = "elasticsearch_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.1.2", features = ["serde"] }
elasticsearch_query_derive = {path = "../elasticsearch_query_derive"}
serde = "1"

[dev-dependencies]
serde_json = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
]
